--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>AppBelieve</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AppBelieve Studio</title>
+    <style>
+        body { font-family: Arial, sans-serif; line-height: 1.6; margin: 40px; color: #333; }
+        h1 { color: #2c3e50; }
+        h2 { color: #34495e; margin-top: 20px; }
+        p, li { margin-bottom: 10px; }
+        a { color: #2980b9; text-decoration: none; }
+        a:hover { text-decoration: underline; }
+    </style>
 </head>
 <body>
-  <h1>AppBelieve</h1>
-  <p>Official developer website.</p>
+    <h1>About AppBelieve Studio</h1>
+    <p><strong>Founded in 2025:</strong> AppBelieve Studio focuses on creating high-quality, privacy-safe mobile apps that make users’ lives easier and happier.</p>
+
+    <h2>Mission & Vision</h2>
+    <p>We believe in creating apps that people truly trust and enjoy.</p>
+
+    <h2>Our Apps</h2>
+    <p>Currently testing our first mobile product, designed to inspire mindfulness and joy.</p>
+
+    <h2>Contact</h2>
+    <ul>
+        <li>📧 Email: <a href="mailto:ngthquynhanh@gmail.com">ngthquynhanh@gmail.com</a></li>
+        <li>🌍 Website: <a href="https://sites.google.com/view/appbelieve" target="_blank">https://sites.google.com/view/appbelieve</a></li>
+        <li>🏢 Location: Hanoi, Vietnam</li>
+    </ul>
 </body>
 </html>
