--- a/privacy.html
+++ b/privacy.html
@@ -1,44 +1,118 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Privacy Policy</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy - AppBelieve Studio</title>
+    <style>
+        body { font-family: Arial, sans-serif; line-height: 1.6; margin: 40px; color: #333; }
+        h1, h2, h3, h4 { color: #2c3e50; margin-top: 30px; }
+        h1 { font-size: 2em; }
+        h2 { font-size: 1.5em; }
+        h3 { font-size: 1.2em; }
+        p, li { margin-bottom: 10px; }
+        ul, ol { margin-left: 20px; }
+        a { color: #2980b9; text-decoration: none; }
+        a:hover { text-decoration: underline; }
+        strong { font-weight: bold; }
+    </style>
 </head>
 <body>
-  <h1>Privacy Policy</h1>
+    <h1>PRIVACY POLICY</h1>
+    <p><strong>Last Updated:</strong> October 27, 2025 | <strong>Effective Date:</strong> October 27, 2025</p>
 
-  <p>AppBelieve (“we”, “our”, or “us”) develops mobile applications and respects your privacy. This Privacy Policy explains how we collect, use, and protect your information.</p>
+    <h2>WHAT'S IN THIS POLICY</h2>
+    <ul>
+        <li>Our Commitment to Privacy</li>
+        <li>Personal Data We Collect</li>
+        <li>How Personal Data is Used</li>
+        <li>How Personal Data is Shared</li>
+        <li>How Personal Data is Retained and Secured</li>
+        <li>Your Rights and Choices</li>
+        <li>App Permissions</li>
+        <li>California Privacy Rights</li>
+        <li>Virginia Privacy Rights</li>
+        <li>European Union Privacy Rights</li>
+        <li>Brazil's Privacy Rights</li>
+        <li>Children's Privacy</li>
+        <li>Policy Scope and Changes</li>
+        <li>Data Protection Officer (DPO) / Privacy Contact</li>
+    </ul>
 
-  <h2>Information We Collect</h2>
-  <ul>
-    <li>Device information (model, OS version, identifiers)</li>
-    <li>App usage data</li>
-    <li>Crash logs & performance analytics</li>
-    <li>Ad interactions (from AdMob / Meta Ads)</li>
-  </ul>
+    <h2>1. Our Commitment to Privacy</h2>
+    <p>At <strong>AppBelieve Studio</strong>, we respect your privacy and are committed to protecting the personal information of our users. This Privacy Policy applies to all mobile applications and related services published under the AppBelieve Studio developer account on Google Play. Transparency builds trust — we want you to clearly understand what data we collect, how we use it, and the choices you have.</p>
+    <p>Our apps may include features powered by trusted third-party services such as Firebase, Google Analytics for Firebase (GA4), Google AdMob, and Google Ads, which help us improve performance, deliver personalized experiences, and support the continued development of free apps.</p>
+    <p>We do not collect personally identifiable information (such as your name, address, or phone number) unless explicitly provided by you for specific purposes (e.g., contacting support). All analytics and advertising data are processed in compliance with applicable privacy regulations, including GDPR, CCPA, and other regional laws. Protecting your privacy is a core part of how we design and maintain our products.</p>
 
-  <h2>How We Use Information</h2>
-  <ul>
-    <li>Improve app performance</li>
-    <li>Personalize content</li>
-    <li>Prevent fraud and abuse</li>
-    <li>Serve relevant ads</li>
-  </ul>
+    <h2>2. Personal Data We Collect</h2>
+    <p>We collect limited types of information to ensure our apps work properly, display relevant ads, and help us understand how users interact with our products. We do not collect or store any personally identifiable or sensitive data such as passwords, precise location, contacts, or financial information.</p>
 
-  <h2>Third-Party Services</h2>
-  <p>Our apps may use third-party SDKs such as:</p>
-  <ul>
-    <li>Google AdMob</li>
-    <li>Google Firebase</li>
-    <li>Meta Audience Network (if applicable)</li>
-  </ul>
+    <h3>2.1. Data Collected Automatically</h3>
+    <ul>
+        <li>Device information (model, OS version, language, country)</li>
+        <li>App version and usage statistics</li>
+        <li>Anonymous identifiers (Advertising ID, Instance ID, or other non-personal identifiers)</li>
+        <li>Crash logs and diagnostic data</li>
+        <li>General location (country or region level only — not GPS)</li>
+        <li>Interaction data (e.g., app screens viewed, session duration)</li>
+        <li>Temporary cached images used for wallpaper display, never uploaded or shared externally</li>
+        <li>Media Access (Photos, Videos, Audio): access only local files for wallpaper display, never uploaded or transmitted</li>
+    </ul>
 
-  <h2>Your Rights</h2>
-  <p>You may request data deletion or contact us for questions at:  
-  <strong>appbelieve@gmail.com</strong></p>
+    <h3>2.2. Data You Provide Voluntarily</h3>
+    <p>If you contact us (e.g., via email or feedback form), we may collect the information you provide:</p>
+    <ul>
+        <li>Name (if included)</li>
+        <li>Email address</li>
+        <li>Message content</li>
+    </ul>
+    <p>We use this data only for responding to your inquiry or providing technical support.</p>
 
-  <h2>Changes to Policy</h2>
-  <p>We may update this Privacy Policy at any time.</p>
+    <h3>2.3. Third-Party SDKs and Services</h3>
+    <p>Our apps may use third-party SDKs that process limited technical data in accordance with their own privacy policies:</p>
+    <ul>
+        <li>Firebase (analytics, crash reporting): <a href="https://firebase.google.com/support/privacy" target="_blank">https://firebase.google.com/support/privacy</a></li>
+        <li>Google Analytics 4 (GA4): <a href="https://policies.google.com/technologies/partner-sites" target="_blank">https://policies.google.com/technologies/partner-sites</a></li>
+        <li>Google AdMob & Google Ads: <a href="https://policies.google.com/technologies/ads" target="_blank">https://policies.google.com/technologies/ads</a></li>
+    </ul>
 
+    <h2>3. How Personal Data is Used</h2>
+    <ul>
+        <li><strong>To Operate and Improve the App:</strong> Analyze app usage, fix bugs, measure engagement (Firebase, GA4, Crashlytics)</li>
+        <li><strong>To Display Ads and Support Monetization:</strong> Serve ads via Google AdMob/Ads, personalized/non-personalized based on consent</li>
+        <li><strong>To Communicate with Users:</strong> Respond to feedback, bug reports, support requests</li>
+        <li><strong>To Ensure Compliance and Security:</strong> Detect/prevent fraud, maintain compliance with laws and policies</li>
+    </ul>
+
+    <h2>4. How Personal Data is Shared</h2>
+    <p>We do not sell, rent, or trade user data. Data is shared only with trusted third-party service providers or for legal reasons.</p>
+
+    <h3>4.1. With Service Providers</h3>
+    <ul>
+        <li>Firebase – analytics, crash reporting, app performance</li>
+        <li>Google Analytics 4 (GA4) – user interaction and event tracking</li>
+        <li>Google AdMob / Google Ads – ad serving, fraud prevention, campaign measurement</li>
+    </ul>
+
+    <h3>4.2. For Legal Reasons</h3>
+    <p>We may disclose information to comply with laws, protect rights/property, or prevent fraud/security issues.</p>
+
+    <h3>4.3. Aggregate and Anonymous Data</h3>
+    <p>We may share anonymized data for research and analytics to improve app quality without affecting individual privacy.</p>
+
+    <h2>5. How Personal Data is Retained and Secured</h2>
+    <ul>
+        <li><strong>Data Retention:</strong> No personal data stored on our servers. Analytics, crash logs, ads metrics handled by Google.</li>
+        <li><strong>Data Security:</strong> Trusted Google infrastructure, encryption, secure transmission. No direct access to raw identifiers.</li>
+    </ul>
+
+    <h2>6. Your Rights and Choices</h2>
+    <p>Control over your information based on region (CCPA, GDPR, VCDPA). Contact: <a href="mailto:ngthquynhanh@gmail.com">ngthquynhanh@gmail.com</a></p>
+
+    <h2>7. App Permissions</h2>
+    <p>Permissions limited to technical purposes: INTERNET, storage for wallpapers, advertising IDs, notifications. No personal photos/files accessed or shared.</p>
+
+    <h2>8–14. Regional Rights, Children, Policy Scope & DPO Contact</h2>
+    <p>All regional privacy rights described (California, Virginia, EU, Brazil). Children under 13 not knowingly collected. Policy updates communicated; DPO contact: <a href="mailto:ngthquynhanh@gmail.com">ngthquynhanh@gmail.com</a> | <a href="https://sites.google.com/view/appbelieve" target="_blank">Website</a></p>
 </body>
 </html>
