--- a/privacy.html
+++ b/privacy.html
@@ -159,7 +159,7 @@
 <p>You have control over how your information is used. Depending on your region, you may have the following rights:</p>
 
 <h3>Access or Delete Data</h3>
-<p>You can contact us at <a href="mailto:ngthquynhanh@gmail.com">ngthquynhanh@gmail.com</a> to ask about any data we hold (for example, support emails) or request deletion. Because our app does not collect personal information directly, most data is handled by Google services like Firebase and AdMob.</p>
+<p>You can contact us at <a href="mailto:dev.appbelieve@gmail.com">dev.appbelieve@gmail.com</a> to ask about any data we hold (for example, support emails) or request deletion. Because our app does not collect personal information directly, most data is handled by Google services like Firebase and AdMob.</p>
 
 <h3>Right to Know Whether Data is Shared (CCPA)</h3>
 <p>Under the California Consumer Privacy Act (CCPA), users have the right to know whether their personal data is sold or shared with third parties. We do not sell or share your personal information with any third parties for marketing or advertising purposes. If this changes in the future, this Privacy Policy will be updated accordingly.</p>
@@ -172,16 +172,16 @@
 <li>iOS: Settings → Privacy → Tracking → Disable “Allow Apps to Request to Track”</li>
 <li>Manage preferences: <a href="https://adssettings.google.com" target="_blank">https://adssettings.google.com</a></li>
 </ul>
-<p>If you want to make a specific opt-out request under privacy laws such as CCPA or VCDPA, please email us at <a href="mailto:ngthquynhanh@gmail.com">ngthquynhanh@gmail.com</a> with the subject line: <strong>Privacy Opt-Out Request – [App Name]</strong>.</p>
+<p>If you want to make a specific opt-out request under privacy laws such as CCPA or VCDPA, please email us at <a href="mailto:dev.appbelieve@gmail.com">dev.appbelieve@gmail.com</a> with the subject line: <strong>Privacy Opt-Out Request – [App Name]</strong>.</p>
 
 <h3>Opt-out of Data Sale or Sharing</h3>
-<p>AppBelieve Studio does not sell or share your personal information. However, if you wish to opt out of any sharing for advertising or targeted ads, you can contact us at <a href="mailto:ngthquynhanh@gmail.com">ngthquynhanh@gmail.com</a> or adjust your settings at <a href="https://adssettings.google.com" target="_blank">https://adssettings.google.com</a>.</p>
+<p>AppBelieve Studio does not sell or share your personal information. However, if you wish to opt out of any sharing for advertising or targeted ads, you can contact us at <a href="mailto:dev.appbelieve@gmail.com">dev.appbelieve@gmail.com</a> or adjust your settings at <a href="https://adssettings.google.com" target="_blank">https://adssettings.google.com</a>.</p>
 
 <h3>Withdraw Consent</h3>
 <p>If you previously gave permission for ads or analytics, you can change this in your device or app settings.</p>
 
 <h3>Contact Us</h3>
-<p>Email: <a href="mailto:ngthquynhanh@gmail.com">ngthquynhanh@gmail.com</a></p>
+<p>Email: <a href="mailto:dev.appbelieve@gmail.com">dev.appbelieve@gmail.com</a></p>
 <p>Subject line: Privacy Request – [App Name]</p>
 <p>We’ll respond as soon as possible, usually within 30 days.</p>
 
