--- a/privacy.html
+++ b/privacy.html
@@ -210,7 +210,7 @@
 <p>As a California resident, you may have the right to:</p>
 <ul>
 <li>Know what personal information is collected and how it’s used.</li>
-<li>Request access or deletion of your personal information. Contact us at <a href="mailto:ngthquynhanh@gmail.com">ngthquynhanh@gmail.com</a> with the subject line “CCPA Data Request – [App Name]”.</li>
+<li>Request access or deletion of your personal information. Contact us at <a href="mailto:dev.appbelieve@gmail.com">dev.appbelieve@gmail.com</a> with the subject line “CCPA Data Request – [App Name]”.</li>
 <li>Opt-out of the sale or sharing of personal information. AppBelieve Studio does not sell personal information. You can opt out of personalized advertising at: <a href="https://adssettings.google.com" target="_blank">https://adssettings.google.com</a>.</li>
 <li>Non-discrimination: exercising your CCPA rights will not result in any difference in app quality, pricing, or access.</li>
 </ul>
@@ -223,7 +223,7 @@
 <li><strong>Right to Data Portability:</strong> You can request a copy of your personal data in a portable and readily usable format, where technically feasible.</li>
 <li><strong>Right to Opt-Out:</strong> You have the right to opt out of the processing of your personal data for targeted advertising, the sale of personal data, or profiling that produces legal or similarly significant effects.</li>
 </ul>
-<p>To exercise any of these rights, please contact us at <a href="mailto:ngthquynhanh@gmail.com">ngthquynhanh@gmail.com</a> with the subject line “Virginia Privacy Request.” We may request verification of your identity before processing your request. If you disagree with our response, you may appeal by replying to our decision email.</p>
+<p>To exercise any of these rights, please contact us at <a href="mailto:dev.appbelieve@gmail.com">dev.appbelieve@gmail.com</a> with the subject line “Virginia Privacy Request.” We may request verification of your identity before processing your request. If you disagree with our response, you may appeal by replying to our decision email.</p>
 
 <h3>How to Opt Out of Data Sharing or Sale</h3>
 <p>AppBelieve Studio respects your right to opt out of any data sharing or selling activities as defined under the VCDPA. Although we do not sell or trade personal data, some third-party services (such as Google AdMob or Google Ads) may use limited technical data like advertising identifiers to deliver personalized ads.</p>
@@ -234,7 +234,7 @@ Android: Settings → Google → Ads → Opt out of Ads Personalization <br>
 iOS: Settings → Privacy → Tracking → Disable “Allow Apps to Request to Track”
 </li>
 <li>Managing your ad preferences directly with Google at: <a href="https://adssettings.google.com" target="_blank">https://adssettings.google.com</a></li>
-<li>Contacting us at <a href="mailto:ngthquynhanh@gmail.com">ngthquynhanh@gmail.com</a> with the subject line “VCDPA Opt-Out Request.”</li>
+<li>Contacting us at <a href="mailto:dev.appbelieve@gmail.com">dev.appbelieve@gmail.com</a> with the subject line “VCDPA Opt-Out Request.”</li>
 </ul>
 <p>We will respond in accordance with applicable privacy laws and confirm that no personal data is shared or sold for advertising purposes.</p>
 
@@ -251,7 +251,7 @@ iOS: Settings → Privacy → Tracking → Disable “Allow Apps to Request to T
 <li><strong>Right to Object:</strong> Object to our processing of your personal data for direct marketing or other purposes based on legitimate interests.</li>
 <li><strong>Right to Withdraw Consent:</strong> Withdraw consent for processing based on consent (e.g., analytics or personalized ads) at any time.</li>
 </ul>
-<p>To exercise these rights, email <a href="mailto:ngthquynhanh@gmail.com">ngthquynhanh@gmail.com</a> with the subject line “GDPR Privacy Request.” We will respond in accordance with applicable EU data protection laws. You also have the right to file a complaint with your local Data Protection Authority.</p>
+<p>To exercise these rights, email <a href="mailto:dev.appbelieve@gmail.com">dev.appbelieve@gmail.com</a> with the subject line “GDPR Privacy Request.” We will respond in accordance with applicable EU data protection laws. You also have the right to file a complaint with your local Data Protection Authority.</p>
 
 <h2>11. Brazil’s Privacy Rights</h2>
 <p>If you are located in Brazil, you have specific rights under the Lei Geral de Proteção de Dados (LGPD) regarding your personal data.</p>
@@ -266,12 +266,12 @@ iOS: Settings → Privacy → Tracking → Disable “Allow Apps to Request to T
 <li><strong>Right to Withdraw Consent:</strong> Withdraw consent for data processing activities at any time.</li>
 <li><strong>Right to Lodge a Complaint:</strong> File a complaint with Brazil’s National Data Protection Authority (ANPD) if you believe your data rights have been violated.</li>
 </ul>
-<p>To exercise your LGPD rights, contact us at <a href="mailto:ngthquynhanh@gmail.com">ngthquynhanh@gmail.com</a> with the subject line “LGPD Data Request.” We will respond in accordance with Brazil’s data protection law.</p>
+<p>To exercise your LGPD rights, contact us at <a href="mailto:dev.appbelieve@gmail.com">dev.appbelieve@gmail.com</a> with the subject line “LGPD Data Request.” We will respond in accordance with Brazil’s data protection law.</p>
 
 <h2>12. Children’s Privacy</h2>
 <p>Our apps are not specifically directed toward children under the age of 13 (or the minimum age required in your country for consent to data processing). We do not knowingly collect, use, or share personal data from children.</p>
 <p>If our app is used by a minor, we strongly encourage parents or guardians to monitor and guide their child’s app activity to ensure a safe experience. For users located in the European Union, we comply with the GDPR-K (General Data Protection Regulation for Kids). If you are under 16 years old, parental or guardian consent is required before using our services.</p>
-<p>If we discover personal information has been collected from a child without parental consent, we will immediately delete such data and inform authorities if required. If you believe we might have inadvertently collected information from a child, contact us at <a href="mailto:ngthquynhanh@gmail.com">ngthquynhanh@gmail.com</a>.</p>
+<p>If we discover personal information has been collected from a child without parental consent, we will immediately delete such data and inform authorities if required. If you believe we might have inadvertently collected information from a child, contact us at <a href="mailto:dev.appbelieve@gmail.com">dev.appbelieve@gmail.com</a>.</p>
 
 <h2>13. Policy Scope and Changes</h2>
 <p>This Privacy Policy applies to all mobile applications and related services published by AppBelieve Studio. We may update this Privacy Policy to reflect changes in practices, technologies, or legal requirements. The “Last Updated” date at the top will be revised accordingly.</p>
@@ -280,7 +280,7 @@ iOS: Settings → Privacy → Tracking → Disable “Allow Apps to Request to T
 <h2>14. Data Protection Officer (DPO) / Privacy Contact</h2>
 <p>If you have questions or requests regarding your personal data, or wish to exercise your privacy rights under applicable laws, please contact our Data Protection Officer (DPO):</p>
 <ul>
-<li>Email: <a href="mailto:ngthquynhanh@gmail.com">ngthquynhanh@gmail.com</a></li>
-<li>Website: <a href="https://sites.google.com/view/appbelieve" target="_blank">https://sites.google.com/view/appbelieve</a></li>
+<li>Email: <a href="mailto:dev.appbelieve@gmail.com">dev.appbelieve@gmail.com</a></li>
+<li>Website: <a href="https://appbelieve.github.io/" target="_blank">https://appbelieve.github.io/</a></li>
 </ul>
 <p>AppBelieve Studio acts as the data controller for information we collect directly and as a data processor for information handled by third-party SDKs. We strive to respond promptly to all inquiries and address concerns regarding personal data.</p>
