--- a/index.html
+++ b/index.html
@@ -1,33 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AppBelieve Studio</title>
-    <style>
-        body { font-family: Arial, sans-serif; line-height: 1.6; margin: 40px; color: #333; }
-        h1 { color: #2c3e50; }
-        h2 { color: #34495e; margin-top: 20px; }
-        p, li { margin-bottom: 10px; }
-        a { color: #2980b9; text-decoration: none; }
-        a:hover { text-decoration: underline; }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AppBelieve Studio</title>
+  <style>
+    /* ===== RESET ===== */
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { font-family: 'Roboto', sans-serif; line-height: 1.6; color: #333; background-color: #f9f9f9; }
+    a { color: #1a73e8; text-decoration: none; }
+    a:hover { text-decoration: underline; }
+
+    /* ===== HEADER ===== */
+    header {
+      background-color: #1a73e8;
+      color: white;
+      padding: 60px 20px 40px 20px;
+      text-align: center;
+    }
+    header h1 {
+      font-family: 'Montserrat', sans-serif;
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+    }
+    header p {
+      font-size: 1.1rem;
+      color: #e0e0e0;
+    }
+
+    /* ===== NAVIGATION ===== */
+    nav {
+      background-color: #fff;
+      text-align: center;
+      padding: 15px 0;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+    }
+    nav a {
+      margin: 0 15px;
+      font-weight: 500;
+      font-size: 1rem;
+    }
+
+    /* ===== MAIN ===== */
+    main {
+      max-width: 1000px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+
+    section {
+      margin-bottom: 60px;
+      padding: 30px;
+      background-color: #fff;
+      border-radius: 8px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+    }
+
+    section h2 {
+      font-family: 'Montserrat', sans-serif;
+      font-size: 1.8rem;
+      color: #1a73e8;
+      margin-bottom: 15px;
+    }
+
+    section p {
+      font-size: 1rem;
+      margin-bottom: 10px;
+      color: #555;
+    }
+
+    /* ===== FOOTER ===== */
+    footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 0.9rem;
+      color: #666;
+      border-top: 1px solid #eee;
+    }
+
+    /* ===== BUTTON ===== */
+    .btn {
+      display: inline-block;
+      padding: 10px 25px;
+      background-color: #1a73e8;
+      color: #fff;
+      border-radius: 5px;
+      font-weight: 500;
+      text-decoration: none;
+      transition: background-color 0.3s;
+    }
+    .btn:hover {
+      background-color: #1558b0;
+    }
+
+    /* ===== RESPONSIVE ===== */
+    @media(max-width: 600px){
+      header h1 { font-size: 1.8rem; }
+      section { padding: 20px; }
+      nav a { margin: 0 10px; font-size: 0.95rem; }
+    }
+  </style>
 </head>
 <body>
-    <h1>About AppBelieve Studio</h1>
-    <p><strong>Founded in 2025:</strong> AppBelieve Studio focuses on creating high-quality, privacy-safe mobile apps that make users’ lives easier and happier.</p>
 
-    <h2>Mission & Vision</h2>
-    <p>We believe in creating apps that people truly trust and enjoy.</p>
+<header>
+  <h1>AppBelieve Studio</h1>
+  <p>Creating clean, functional, and engaging mobile apps.</p>
+</header>
 
-    <h2>Our Apps</h2>
-    <p>Currently testing our first mobile product, designed to inspire mindfulness and joy.</p>
+<nav>
+  <a href="#about">About Us</a>
+  <a href="#apps">Our Apps</a>
+  <a href="#contact">Contact</a>
+</nav>
 
-    <h2>Contact</h2>
-    <ul>
-        <li>📧 Email: <a href="mailto:ngthquynhanh@gmail.com">ngthquynhanh@gmail.com</a></li>
-        <li>🌍 Website: <a href="https://sites.google.com/view/appbelieve" target="_blank">https://sites.google.com/view/appbelieve</a></li>
-        <li>🏢 Location: Hanoi, Vietnam</li>
-    </ul>
+<main>
+
+<section id="about">
+  <h2>About Us</h2>
+  <p>AppBelieve Studio is a mobile app development company focused on delivering high-quality, user-friendly applications. Our mission is to combine creativity and technology to produce apps that delight users and solve real-world problems.</p>
+</section>
+
+<section id="apps">
+  <h2>Our Apps</h2>
+  <p>We specialize in free and monetized apps, utilizing trusted platforms like Google Play. Each app is designed with attention to performance, privacy, and user experience.</p>
+  <p><a href="#" class="btn">View All Apps</a></p>
+</section>
+
+<section id="contact">
+  <h2>Contact</h2>
+  <p>Have questions or feedback? We'd love to hear from you!</p>
+  <p>Email us at: <a href="mailto:ngthquynhanh@gmail.com">ngthquynhanh@gmail.com</a></p>
+  <p>Visit our website: <a href="https://sites.google.com/view/appbelieve" target="_blank">AppBelieve Studio Website</a></p>
+</section>
+
+</main>
+
+<footer>
+  &copy; 2025 AppBelieve Studio
+</footer>
+
 </body>
 </html>
