--- a/index.html
+++ b/index.html
@@ -6,124 +6,51 @@
 <title>AppBelieve Studio</title>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Inter:wght@400;500&display=swap" rel="stylesheet">
 <style>
-  /* Reset cơ bản */
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+  * { margin:0; padding:0; box-sizing:border-box; }
+  body { font-family:'Inter', sans-serif; background:#f4f5f7; color:#1a1a1a; line-height:1.6; }
 
-  body {
-    font-family: 'Inter', sans-serif;
-    background-color: #f4f5f7;
-    color: #1a1a1a;
-    line-height: 1.6;
-  }
+  a { text-decoration:none; color:inherit; }
 
-  a {
-    text-decoration: none;
-    color: inherit;
-  }
-
-  /* Header + Menu */
   header {
     background: linear-gradient(135deg, #0d3b66, #1a73e8);
-    padding: 20px 40px;
-    color: white;
+    padding:20px 40px;
+    color:white;
+    position: sticky;
+    top:0;
+    z-index: 1000;
   }
+  .nav-container { display:flex; justify-content: space-between; align-items:center; max-width:1200px; margin:0 auto; }
+  .logo { font-family:'Montserrat', sans-serif; font-size:1.8rem; font-weight:700; }
+  nav a { margin-left:30px; font-weight:500; color:white; transition: color 0.3s; }
+  nav a:hover { color:#ffd700; }
 
-  .nav-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
-  }
-
-  .logo {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 1.8rem;
-    font-weight: 700;
-  }
-
-  nav a {
-    margin-left: 30px;
-    font-weight: 500;
-    color: white;
-    transition: color 0.3s;
-  }
-
-  nav a:hover {
-    color: #ffd700;
-  }
-
-  /* Hero / Home section */
   .hero {
-    max-width: 1200px;
-    margin: 60px auto;
-    padding: 40px 20px;
-    background-color: white;
-    border-radius: 12px;
-    box-shadow: 0 8px 25px rgba(0,0,0,0.1);
-    text-align: center;
+    max-width:1200px; margin:60px auto; padding:80px 20px; background: linear-gradient(135deg, #1a73e8, #0d3b66); 
+    border-radius:16px; color:white; text-align:center; box-shadow:0 12px 40px rgba(0,0,0,0.2);
   }
+  .hero h1 { font-family:'Montserrat', sans-serif; font-size:3rem; margin-bottom:20px; }
+  .hero p { font-size:1.3rem; margin-bottom:0; }
 
-  .hero h1 {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 2.5rem;
-    margin-bottom: 20px;
-    color: #0d3b66;
-  }
-
-  .hero p {
-    font-size: 1.2rem;
-    color: #333;
-    margin-bottom: 30px;
-  }
-
-  /* Sections */
   section {
-    max-width: 900px;
-    margin: 50px auto;
-    padding: 40px 20px;
-    background-color: white;
-    border-radius: 12px;
-    box-shadow: 0 4px 20px rgba(0,0,0,0.05);
+    max-width:1200px; margin:60px auto; padding:60px 20px; background:white; border-radius:16px; 
+    box-shadow:0 8px 30px rgba(0,0,0,0.1); text-align:center;
   }
+  section h2 { font-family:'Montserrat', sans-serif; font-size:2.2rem; margin-bottom:30px; color:#0d3b66; }
+  section p { font-size:1.1rem; margin-bottom:20px; color:#333; max-width:900px; margin-left:auto; margin-right:auto; }
 
-  section h2 {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 2rem;
-    margin-bottom: 20px;
-    color: #0d3b66;
-  }
+  .apps-grid { display:grid; grid-template-columns:repeat(auto-fit, minmax(220px,1fr)); gap:30px; }
+  .app-card { background:#f0f4ff; border-radius:12px; padding:30px 20px; box-shadow:0 6px 20px rgba(0,0,0,0.1); transition:transform 0.3s, box-shadow 0.3s; }
+  .app-card:hover { transform:translateY(-8px); box-shadow:0 12px 30px rgba(0,0,0,0.15); }
+  .app-card h3 { font-size:1.4rem; color:#0d3b66; margin-bottom:10px; }
+  .app-card p { font-size:1rem; color:#333; }
 
-  section p {
-    font-size: 1rem;
-    margin-bottom: 15px;
-    color: #333;
-  }
+  footer { background:#0d3b66; color:white; text-align:center; padding:25px 20px; font-size:0.9rem; }
+  footer a { color:#ffd700; font-weight:500; }
 
-  footer {
-    background-color: #0d3b66;
-    color: white;
-    text-align: center;
-    padding: 25px 20px;
-    font-size: 0.9rem;
-  }
-
-  footer a {
-    color: #ffd700;
-    font-weight: 500;
-  }
-
-  @media (max-width: 768px) {
-    nav a {
-      margin-left: 15px;
-    }
-    .hero h1 {
-      font-size: 2rem;
-    }
+  @media(max-width:768px){
+    nav a { margin-left:15px; }
+    .hero h1 { font-size:2rem; }
+    section { padding:40px 20px; }
   }
 </style>
 </head>
@@ -134,26 +61,45 @@
     <div class="logo">AppBelieve Studio</div>
     <nav>
       <a href="#home">Home</a>
-      <a href="https://play.google.com/store/apps/developer?id=AppBelieve+Studio" target="_blank">Our Apps</a>
       <a href="https://appbelieve.github.io/privacy.html" target="_blank">Privacy Policy</a>
-      <a href="#contact">Contact</a>
     </nav>
   </div>
 </header>
 
 <section id="home" class="hero">
-  <h1>Welcome to AppBelieve Studio</h1>
-  <p>We develop professional mobile applications that are both innovative and reliable. Explore our apps, learn about our mission, and get in touch with us.</p>
+  <h1>AppBelieve Studio</h1>
+  <p>Innovative mobile applications. Reliable. Professional. Explore our work and connect with us.</p>
+</section>
+
+<section id="our-apps">
+  <h2>Our Apps</h2>
+  <div class="apps-grid">
+    <div class="app-card">
+      <h3>App One</h3>
+      <p>Short description of App One with key features highlighted.</p>
+    </div>
+    <div class="app-card">
+      <h3>App Two</h3>
+      <p>Short description of App Two with key features highlighted.</p>
+    </div>
+    <div class="app-card">
+      <h3>App Three</h3>
+      <p>Short description of App Three with key features highlighted.</p>
+    </div>
+    <div class="app-card">
+      <h3>App Four</h3>
+      <p>Short description of App Four with key features highlighted.</p>
+    </div>
+  </div>
 </section>
 
 <section id="about">
   <h2>About Us</h2>
-  <p>AppBelieve Studio focuses on creating high-quality apps on Google Play. Our team emphasizes user experience, privacy, and performance. We use trusted third-party services responsibly to enhance our apps while respecting user data.</p>
+  <p>AppBelieve Studio develops high-quality mobile apps on Google Play. We focus on performance, user experience, and responsible use of analytics & ads to ensure user privacy.</p>
 </section>
 
 <section id="contact">
   <h2>Contact</h2>
-  <p>If you have questions, feedback, or business inquiries, you can reach us via:</p>
   <p>Email: <a href="mailto:dev.appbelieve@gmail.com">dev.appbelieve@gmail.com</a></p>
   <p>Website: <a href="https://appbelieve.github.io/" target="_blank">https://appbelieve.github.io/</a></p>
 </section>
@@ -164,3 +110,4 @@
 
 </body>
 </html>
+
