--- a/index.html
+++ b/index.html
@@ -4,110 +4,127 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>AppBelieve Studio</title>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Inter:wght@400;500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Montserrat:wght@700&display=swap" rel="stylesheet">
 <style>
-  * { margin:0; padding:0; box-sizing:border-box; }
-  body { font-family:'Inter', sans-serif; background:#f4f5f7; color:#1a1a1a; line-height:1.6; }
+    /* Reset */
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { font-family: 'Inter', sans-serif; line-height: 1.6; background: #f0f4f8; color: #1c1c1c; scroll-behavior: smooth; }
 
-  a { text-decoration:none; color:inherit; }
+    /* Header */
+    header { position: sticky; top: 0; background: #0a3d62; padding: 20px 40px; display: flex; justify-content: space-between; align-items: center; z-index: 10; }
+    header h1 { color: #fff; font-family: 'Montserrat', sans-serif; font-size: 1.8rem; }
+    nav a { color: #fff; margin-left: 30px; text-decoration: none; font-weight: 500; transition: color 0.3s; }
+    nav a:hover { color: #f9ca24; }
 
-  header {
-    background: linear-gradient(135deg, #0d3b66, #1a73e8);
-    padding:20px 40px;
-    color:white;
-    position: sticky;
-    top:0;
-    z-index: 1000;
-  }
-  .nav-container { display:flex; justify-content: space-between; align-items:center; max-width:1200px; margin:0 auto; }
-  .logo { font-family:'Montserrat', sans-serif; font-size:1.8rem; font-weight:700; }
-  nav a { margin-left:30px; font-weight:500; color:white; transition: color 0.3s; }
-  nav a:hover { color:#ffd700; }
+    /* Hero */
+    .hero { display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; height: 100vh; background: linear-gradient(135deg, #0a3d62, #4a69bd); color: #fff; padding: 0 20px; }
+    .hero h2 { font-family: 'Montserrat', sans-serif; font-size: 3rem; margin-bottom: 20px; }
+    .hero p { font-size: 1.2rem; max-width: 700px; margin-bottom: 30px; }
+    .hero a { text-decoration: none; background: #f9ca24; color: #0a3d62; padding: 15px 30px; border-radius: 8px; font-weight: bold; transition: background 0.3s; }
+    .hero a:hover { background: #f7b731; }
 
-  .hero {
-    max-width:1200px; margin:60px auto; padding:80px 20px; background: linear-gradient(135deg, #1a73e8, #0d3b66); 
-    border-radius:16px; color:white; text-align:center; box-shadow:0 12px 40px rgba(0,0,0,0.2);
-  }
-  .hero h1 { font-family:'Montserrat', sans-serif; font-size:3rem; margin-bottom:20px; }
-  .hero p { font-size:1.3rem; margin-bottom:0; }
+    /* Section */
+    section { padding: 80px 20px; max-width: 1200px; margin: auto; }
+    section h3 { font-family: 'Montserrat', sans-serif; font-size: 2rem; margin-bottom: 40px; text-align: center; color: #0a3d62; }
 
-  section {
-    max-width:1200px; margin:60px auto; padding:60px 20px; background:white; border-radius:16px; 
-    box-shadow:0 8px 30px rgba(0,0,0,0.1); text-align:center;
-  }
-  section h2 { font-family:'Montserrat', sans-serif; font-size:2.2rem; margin-bottom:30px; color:#0d3b66; }
-  section p { font-size:1.1rem; margin-bottom:20px; color:#333; max-width:900px; margin-left:auto; margin-right:auto; }
+    /* Our Apps Grid */
+    .apps-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 30px; }
+    .app-card { background: #fff; padding: 30px 20px; border-radius: 12px; box-shadow: 0 6px 15px rgba(0,0,0,0.1); display: flex; flex-direction: column; justify-content: space-between; transition: transform 0.3s, box-shadow 0.3s; }
+    .app-card:hover { transform: translateY(-8px); box-shadow: 0 10px 20px rgba(0,0,0,0.15); }
+    .app-card h4 { font-family: 'Montserrat', sans-serif; font-size: 1.4rem; margin-bottom: 15px; color: #0a3d62; }
+    .app-card p { flex-grow: 1; margin-bottom: 20px; font-size: 0.95rem; color: #333; }
+    .app-card a { text-decoration: none; background: #0a3d62; color: #fff; padding: 10px 20px; border-radius: 6px; font-weight: 500; text-align: center; transition: background 0.3s; }
+    .app-card a:hover { background: #4a69bd; }
 
-  .apps-grid { display:grid; grid-template-columns:repeat(auto-fit, minmax(220px,1fr)); gap:30px; }
-  .app-card { background:#f0f4ff; border-radius:12px; padding:30px 20px; box-shadow:0 6px 20px rgba(0,0,0,0.1); transition:transform 0.3s, box-shadow 0.3s; }
-  .app-card:hover { transform:translateY(-8px); box-shadow:0 12px 30px rgba(0,0,0,0.15); }
-  .app-card h3 { font-size:1.4rem; color:#0d3b66; margin-bottom:10px; }
-  .app-card p { font-size:1rem; color:#333; }
+    /* About & Contact */
+    .about-contact { display: flex; flex-direction: column; gap: 50px; max-width: 800px; margin: auto; }
+    .about-contact div { background: #fff; padding: 30px 20px; border-radius: 12px; box-shadow: 0 6px 15px rgba(0,0,0,0.1); }
+    .about-contact h4 { font-family: 'Montserrat', sans-serif; font-size: 1.6rem; margin-bottom: 15px; color: #0a3d62; }
+    .about-contact p { font-size: 1rem; color: #333; }
+    .about-contact a { color: #f9ca24; text-decoration: none; transition: color 0.3s; }
+    .about-contact a:hover { color: #f7b731; }
 
-  footer { background:#0d3b66; color:white; text-align:center; padding:25px 20px; font-size:0.9rem; }
-  footer a { color:#ffd700; font-weight:500; }
+    /* Footer */
+    footer { background: #0a3d62; color: #fff; text-align: center; padding: 30px 20px; font-size: 0.9rem; }
 
-  @media(max-width:768px){
-    nav a { margin-left:15px; }
-    .hero h1 { font-size:2rem; }
-    section { padding:40px 20px; }
-  }
+    /* Scroll animation */
+    .fade-in { opacity: 0; transform: translateY(20px); transition: all 0.8s ease-out; }
+    .fade-in.show { opacity: 1; transform: translateY(0); }
+
+    @media (max-width: 768px) {
+        .hero h2 { font-size: 2.2rem; }
+        .hero p { font-size: 1rem; }
+        header { padding: 15px 20px; }
+        nav a { margin-left: 15px; font-size: 0.95rem; }
+    }
 </style>
 </head>
 <body>
 
 <header>
-  <div class="nav-container">
-    <div class="logo">AppBelieve Studio</div>
+    <h1>AppBelieve Studio</h1>
     <nav>
-      <a href="#home">Home</a>
-      <a href="https://appbelieve.github.io/privacy.html" target="_blank">Privacy Policy</a>
+        <a href="#home">Home</a>
+        <a href="https://appbelieve.github.io/privacy.html" target="_blank">Privacy Policy</a>
     </nav>
-  </div>
 </header>
 
-<section id="home" class="hero">
-  <h1>AppBelieve Studio</h1>
-  <p>Innovative mobile applications. Reliable. Professional. Explore our work and connect with us.</p>
+<section class="hero" id="home">
+    <h2>Welcome to AppBelieve Studio</h2>
+    <p>We create high-quality, innovative mobile applications that are easy to use and enjoyable for everyone. Discover our apps and explore what we have to offer.</p>
+    <a href="#our-apps">Explore Our Apps</a>
 </section>
 
-<section id="our-apps">
-  <h2>Our Apps</h2>
-  <div class="apps-grid">
-    <div class="app-card">
-      <h3>App One</h3>
-      <p>Short description of App One with key features highlighted.</p>
+<section id="our-apps" class="fade-in">
+    <h3>Our Apps</h3>
+    <div class="apps-grid">
+        <div class="app-card">
+            <h4>App One</h4>
+            <p>High-quality wallpaper and personalization app. Easy to use, smooth performance, endless creativity.</p>
+            <a href="https://play.google.com/store/apps/developer?id=AppBelieve+Studio" target="_blank">View on Google Play</a>
+        </div>
+        <div class="app-card">
+            <h4>App Two</h4>
+            <p>Discover unique tools to enhance productivity and organization in your daily life.</p>
+            <a href="https://play.google.com/store/apps/developer?id=AppBelieve+Studio" target="_blank">View on Google Play</a>
+        </div>
+        <div class="app-card">
+            <h4>App Three</h4>
+            <p>Fun and creative app to express your personality and share with friends.</p>
+            <a href="https://play.google.com/store/apps/developer?id=AppBelieve+Studio" target="_blank">View on Google Play</a>
+        </div>
     </div>
-    <div class="app-card">
-      <h3>App Two</h3>
-      <p>Short description of App Two with key features highlighted.</p>
-    </div>
-    <div class="app-card">
-      <h3>App Three</h3>
-      <p>Short description of App Three with key features highlighted.</p>
-    </div>
-    <div class="app-card">
-      <h3>App Four</h3>
-      <p>Short description of App Four with key features highlighted.</p>
-    </div>
-  </div>
 </section>
 
-<section id="about">
-  <h2>About Us</h2>
-  <p>AppBelieve Studio develops high-quality mobile apps on Google Play. We focus on performance, user experience, and responsible use of analytics & ads to ensure user privacy.</p>
-</section>
-
-<section id="contact">
-  <h2>Contact</h2>
-  <p>Email: <a href="mailto:dev.appbelieve@gmail.com">dev.appbelieve@gmail.com</a></p>
-  <p>Website: <a href="https://appbelieve.github.io/" target="_blank">https://appbelieve.github.io/</a></p>
+<section class="about-contact fade-in">
+    <div>
+        <h4>About Us</h4>
+        <p>AppBelieve Studio is dedicated to developing innovative and user-friendly mobile applications. We focus on quality, simplicity, and a delightful user experience.</p>
+    </div>
+    <div>
+        <h4>Contact</h4>
+        <p>Email: <a href="mailto:dev.appbelieve@gmail.com">dev.appbelieve@gmail.com</a></p>
+        <p>Website: <a href="https://appbelieve.github.io/" target="_blank">https://appbelieve.github.io/</a></p>
+    </div>
 </section>
 
 <footer>
-  &copy; 2025 AppBelieve Studio
+    &copy; 2025 AppBelieve Studio. All Rights Reserved.
 </footer>
+
+<script>
+    // Scroll animation
+    const faders = document.querySelectorAll('.fade-in');
+    const appearOptions = { threshold: 0.2, rootMargin: "0px 0px -50px 0px" };
+    const appearOnScroll = new IntersectionObserver(function(entries, appearOnScroll){
+        entries.forEach(entry => {
+            if(!entry.isIntersecting) return;
+            entry.target.classList.add('show');
+            appearOnScroll.unobserve(entry.target);
+        });
+    }, appearOptions);
+    faders.forEach(fader => { appearOnScroll.observe(fader); });
+</script>
 
 </body>
 </html>
-
